<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        tools:context=".MainActivity">
        <ImageView
            android:id="@+id/icon_cost_of_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            app:srcCompat="@drawable/ic_store"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/cost_of_service"
            app:layout_constraintBottom_toBottomOf="@id/cost_of_service"/>
        <com.google.android.material.textfield.TextInputLayout
            app:layout_constraintStart_toEndOf="@id/icon_cost_of_service"
            android:id="@+id/cost_of_service"
            android:layout_width="match_parent"
            android:layout_marginStart="35dp"
            android:layout_height="wrap_content"
            android:hint="@string/cost_of_service"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cost_of_service_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <ImageView
            android:id="@+id/icon_service_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            app:srcCompat="@drawable/ic_service"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/service_question"
            app:layout_constraintBottom_toBottomOf="@id/service_question" />

        <TextView
            android:id="@+id/service_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="15dp"
            style="@style/Widget.TipTime.TextView"
            android:text="@string/how_was_the_service"
            app:layout_constraintStart_toEndOf="@+id/icon_service_question"
            app:layout_constraintTop_toBottomOf="@+id/cost_of_service" />
        <RadioGroup
            android:id="@+id/tip_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            android:checkedButton="@id/option_twenty_percent"
            app:layout_constraintTop_toBottomOf="@+id/service_question">
            <RadioButton
                android:id="@+id/option_twenty_percent"
                android:layout_width="wrap_content"
                style="@style/Widget.TipTime.CompoundButton.RadioButton"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:text="@string/amazing_20"
                />
            <RadioButton
                android:id="@+id/option_eighteen_percent"
                android:layout_width="wrap_content"
                android:layout_marginStart="35dp"
                style="@style/Widget.TipTime.CompoundButton.RadioButton"
                android:layout_height="wrap_content"
                android:text="@string/good_18" />

            <RadioButton
                android:id="@+id/option_fifteen_percent"
                style="@style/Widget.TipTime.CompoundButton.RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="35dp"
                android:text="@string/ok_15" />
        </RadioGroup>
        <ImageView
            android:id="@+id/icon_round_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            app:srcCompat="@drawable/ic_round_up"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/round_up_switch"
            app:layout_constraintBottom_toBottomOf="@id/round_up_switch"/>
        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/round_up_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/round_up_tip"
            style="@style/Widget.TipTime.CompoundButton.Switch"
            android:layout_marginStart="35dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tip_option"/>
        <Button
            android:id="@+id/calculate_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calculate"
            app:layout_constraintTop_toBottomOf="@id/round_up_switch"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
        <TextView
            android:id="@+id/tip_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.TipTime.TextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/calculate_button"
            tools:text="Tip Amount: $10" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
